# AscendoTrainBoard

./: .gitignore  PRIVACY_POLICY.md  api_docs.md  generate_openapi_kotlin.sh  openapi.yaml  readme-en.md  readme.md  reklama.odg
app/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/composeApp/: build.gradle.kts  gradle.properties
app/composeApp/docs/: CreateProblemRequest.md  Error.md  Grade.md  LoginResponse.md  Problem.md  ProblemGrades.md  ProblemList.md  ProblemSummary.md  RegisterRequest.md  Sector.md  SectorSummary.md  SubmitGradeRequest.md  UpdateProblemRequest.md  UpdateUserRequest.md  User.md  UserDetail.md
app/composeApp/src/androidMain/: AndroidManifest.xml
app/composeApp/src/androidMain/kotlin/io/github/samolego/ascendo_trainboard/: AndroidStorage.kt  MainActivity.kt  Platform.android.kt
app/composeApp/src/androidMain/res/values/: strings.xml
app/composeApp/src/commonMain/kotlin/io/github/samolego/ascendo_trainboard/: App.kt  Greeting.kt  Platform.kt
app/composeApp/src/jsMain/kotlin/io/github/samolego/ascendo_trainboard/: JsLocalStorage.kt  Platform.js.kt
app/composeApp/src/wasmJsMain/kotlin/io/github/samolego/ascendo_trainboard/: Platform.wasmJs.kt  WasmLocalStorage.kt
app/composeApp/src/webMain/kotlin/io/github/samolego/ascendo_trainboard/: main.kt
app/composeApp/src/webMain/resources/: index.html
app/gradle/: libs.versions.toml
backend/: .gitignore  Cargo.toml  README.md
backend/src/: auth.rs  handlers.rs  main.rs  models.rs  rate_limit.rs  state.rs
(+37 files in other folders)
