[package]
name = "minimal-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "fs", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.19"
sha2 = "0.10.8"
rand = "0.8.5"
hex = "0.4.3"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
